creusot/tests/should_fail/bug/869.mlcfg

module C869_Unsound
  use prelude.Ghost
  use prelude.Borrow
  use prelude.Ghost
  use prelude.Ghost
  use prelude.Ghost
  predicate resolve0 (self : borrowed (Ghost.ghost_ty bool)) =
    [#"../../../../../creusot-contracts/src/resolve.rs" 25 20 25 34]  ^ self =  * self
  val resolve0 (self : borrowed (Ghost.ghost_ty bool)) : bool
    ensures { result = resolve0 self }
    
  use prelude.Ghost
  let rec cfg unsound [#"../869.rs" 4 0 4 16] [@cfg:stackify] [@cfg:subregion_analysis] (_1 : ()) : ()
   = [@vc:do_not_keep_trace] [@vc:sp]
  var _0 : ();
  var x : Ghost.ghost_ty bool;
  var xm : borrowed (Ghost.ghost_ty bool);
  var _4 : borrowed (Ghost.ghost_ty bool);
  var b : borrowed (Ghost.ghost_ty bool);
  var _6 : borrowed (Ghost.ghost_ty bool);
  var bg : Ghost.ghost_ty (borrowed (Ghost.ghost_ty bool));
  var evil : borrowed (Ghost.ghost_ty bool);
  var _12 : borrowed (Ghost.ghost_ty bool);
  var _15 : Ghost.ghost_ty bool;
  {
    goto BB0
  }
  BB0 {
    [#"../869.rs" 5 29 5 41] x <- ([#"../869.rs" 5 29 5 41] Ghost.new true);
    goto BB1
  }
  BB1 {
    [#"../869.rs" 7 31 7 37] _4 <- Borrow.borrow_mut x;
    [#"../869.rs" 7 31 7 37] x <-  ^ _4;
    [#"../869.rs" 7 31 7 37] xm <- Borrow.borrow_final ( * _4) (Borrow.get_id _4);
    [#"../869.rs" 7 31 7 37] _4 <- { _4 with current = ( ^ xm) ; };
    assume { resolve0 _4 };
    [#"../869.rs" 9 30 9 38] _6 <- Borrow.borrow_mut ( * xm);
    [#"../869.rs" 9 30 9 38] xm <- { xm with current = ( ^ _6) ; };
    [#"../869.rs" 9 30 9 38] b <- Borrow.borrow_final ( * _6) (Borrow.get_id _6);
    [#"../869.rs" 9 30 9 38] _6 <- { _6 with current = ( ^ b) ; };
    assume { resolve0 b };
    assume { resolve0 _6 };
    [#"../869.rs" 10 38 10 47] bg <- ([#"../869.rs" 10 38 10 47] Ghost.new b);
    goto BB2
  }
  BB2 {
    assert { [@expl:assertion] [#"../869.rs" 11 20 11 50] Ghost.inner ( * Ghost.inner bg) = true /\ Ghost.inner ( ^ Ghost.inner bg) = true };
    [#"../869.rs" 13 33 13 41] _12 <- Borrow.borrow_final ( * xm) (Borrow.get_id xm);
    [#"../869.rs" 13 33 13 41] xm <- { xm with current = ( ^ _12) ; };
    [#"../869.rs" 13 33 13 41] evil <- Borrow.borrow_final ( * _12) (Borrow.get_id _12);
    [#"../869.rs" 13 33 13 41] _12 <- { _12 with current = ( ^ evil) ; };
    assume { resolve0 _12 };
    assert { [@expl:assertion] [#"../869.rs" 17 20 17 53] (evil = Ghost.inner bg) = (Ghost.inner ( ^ evil) = true) };
    [#"../869.rs" 18 12 18 58] _15 <- ([#"../869.rs" 18 12 18 58] Ghost.new (if evil = Ghost.inner bg then
      false
    else
      true
    ));
    goto BB3
  }
  BB3 {
    [#"../869.rs" 18 4 18 58] evil <- { evil with current = ([#"../869.rs" 18 4 18 58] _15) ; };
    [#"../869.rs" 18 4 18 58] _15 <- any Ghost.ghost_ty bool;
    assume { resolve0 evil };
    assume { resolve0 xm };
    assert { [@expl:assertion] [#"../869.rs" 19 20 19 37] Ghost.inner ( * evil) = (not Ghost.inner ( ^ evil)) };
    assert { [@expl:assertion] [#"../869.rs" 20 20 20 37] Ghost.inner ( * evil) = (not Ghost.inner ( * evil)) };
    [#"../869.rs" 4 17 21 1] _0 <- ([#"../869.rs" 4 17 21 1] ());
    return _0
  }
  
end
